# CalibAnalysis

./: CMakeLists.txt  README.md  getMayaviMap.py  run.sh
app/: CalsRT.cpp  VisualizeReprojection.cpp  getXmlFormColmap.cpp
input/txt/: cameras.txt  images.txt  points.xml  points3D.txt  project.ini
input/xml_gt_60/: 0.xml  1.xml  10.xml  11.xml  12.xml  13.xml  14.xml  15.xml  16.xml  17.xml  18.xml  19.xml  2.xml  20.xml  21.xml  22.xml  23.xml  24.xml  25.xml  26.xml  27.xml  28.xml  29.xml  3.xml  30.xml  31.xml  32.xml  33.xml  34.xml  35.xml  36.xml  37.xml  38.xml  39.xml  4.xml  40.xml  41.xml  42.xml  43.xml  44.xml  (+20 more)
input/xml_noise/: 0.xml  1.xml  10.xml  11.xml  12.xml  13.xml  14.xml  15.xml  16.xml  17.xml  18.xml  19.xml  2.xml  20.xml  21.xml  22.xml  23.xml  24.xml  25.xml  26.xml  27.xml  28.xml  29.xml  3.xml  30.xml  31.xml  32.xml  33.xml  34.xml  35.xml  36.xml  37.xml  38.xml  39.xml  4.xml  40.xml  41.xml  42.xml  43.xml  44.xml  (+20 more)
input/xml_noise_world/: 0.xml  1.xml  10.xml  11.xml  12.xml  13.xml  14.xml  15.xml  16.xml  17.xml  18.xml  19.xml  2.xml  20.xml  21.xml  22.xml  23.xml  24.xml  25.xml  26.xml  27.xml  28.xml  29.xml  3.xml  30.xml  31.xml  32.xml  33.xml  34.xml  35.xml  36.xml  37.xml  38.xml  39.xml  4.xml  40.xml  41.xml  42.xml  43.xml  44.xml  (+20 more)
output/: error.txt  euler_tvec_error.txt
